src/objects/Fusion_Line_Item_To_GL_Account_Junction__c.object
<CustomObject>
    <fields>
        <fullName>Fusion_Report_Line_Item__c</fullName>
        <label>Fusion Report Line Item</label>
        <referenceTo>Fusion_Report_Line_Item__c</referenceTo>
        <relationshipLabel>Fusion Line Item To GL Account Junctions</relationshipLabel>
        <relationshipName>Fusion_Line_Item_To_GL_Account_Junctions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>General_Account__c</fullName>
        <label>General Account</label>
        <referenceTo>General_Account__c</referenceTo>
        <relationshipLabel>Fusion Line Item To GL Account Junctions</relationshipLabel>
        <relationshipName>Fusion_Line_Item_To_GL_Account_Junctions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Fusion_Line_Item_To_GL_Account_Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <label>Fusion Line Item To GL Account Junction</label>
    <nameField>
        <displayFormat>FGLJ-{00000000}</displayFormat>
        <label>Junction Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fusion Line Item To GL Account Junctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>